# ConfRover

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.js  index.html  pyproject.toml  styles.css
examples/: cli_run.sh  example_fwd.json  example_iid.json  example_interp.json  python_api.ipynb
src/confrover/: __init__.py  cli.py  env.py  inference.py
src/confrover/_ext/ligo_af3/: LICENSE.txt  README.md
src/confrover/_ext/ligo_af3/models/: embedders.py  pairformer.py  template.py
src/confrover/_ext/ligo_af3/models/components/: attention_pair_bias.py  dropout.py  primitives.py  transition.py  triangular_attention.py  triangular_multiplicative_update.py
src/confrover/_ext/ligo_af3/models/utils/: block_utils.py  checkpointing.py  (+1 more)
src/confrover/configs/: inference.yaml
src/confrover/configs/model/: confrover.yaml
src/confrover/data/: datamodule.py  infer.py
src/confrover/data/io/: pdb.py  xtc.py
src/confrover/data/msa/: README.md  __init__.py  mmseq2_colab.py  msa_loader.py
src/confrover/data/pretrain_repr/: __init__.py
src/confrover/data/pretrain_repr/openfold/: README.md  __init__.py  loader.py  make_openfold_repr.py  openfold_model.py  utils.py
src/confrover/model/: __init__.py  confrover.py
src/confrover/model/decoder/: __init__.py
src/confrover/model/decoder/confdiff/: __init__.py  embedder.py  structure_module.py
src/confrover/model/encoder/: _embeddings.py  _input_pair_stacks.py  pseudo_beta_pair.py
src/confrover/model/temporal/: kv_cache.py  llama.py
src/confrover/model/utils/: all_atom.py  checkpoint_activations.py  writer.py
src/confrover/utils/: __init__.py
src/confrover/utils/hydra_utils/: README.md  __init__.py  hydra_tools.py  instantiators.py  logging_utils.py  rich_utils.py
src/confrover/utils/misc/: __init__.py  cli.py  ext_types.py  install.py  process.py  pylogger.py
src/confrover/utils/test_utils/: __init__.py  config.py  test_infer_utils.py
src/confrover/utils/torch/: callbacks.py  ckpt.py  tensor.py  zero_to_fp32.py
tests/: conftest.py
tests/infer/: test_infer.py  test_infer.sh  test_infer_expected_output.npz
tests/test_data/: atlasTest_fwd_100ns.json  atlas_test_small.csv
tests/test_data/atlas/6okd_C/: 6okd_C_prod_R1_fit.xtc
tests/test_data/atlas/6ro6_A/: 6ro6_A_prod_R1_fit.xtc
tests/test_data/atlas/7jfl_C/: 7jfl_C_prod_R1_fit.xtc
tests/test_data/atlas/7lp1_A/: 7lp1_A_prod_R1_fit.xtc
tests/test_data/openfold_repr/: seqres_to_index.csv
tests/test_data/openfold_repr/1z/1zoq_C/: 1zoq_C_recycle3_pair_repr.npy  1zoq_C_recycle3_single_repr.npy
tests/test_data/openfold_repr/6o/6okd_C/: 6okd_C_recycle3_pair_repr.npy  6okd_C_recycle3_single_repr.npy
tests/test_data/openfold_repr/6r/6ro6_A/: 6ro6_A_recycle3_pair_repr.npy  6ro6_A_recycle3_single_repr.npy
tests/test_data/openfold_repr/7l/7lp1_A/: 7lp1_A_recycle3_pair_repr.npy  7lp1_A_recycle3_single_repr.npy
(+6 files in other folders)
